@@ -1,6 +1,12 @@
+2011-06-23  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/kern/emu/getroot.c (grub_guess_root_device): Don't accept
+	/dev/root as a valid device.
+
 2011-06-23  Jim Meyering  <meyering@redhat.com>
 
-	avoid NULL deref in grub_device_open
+	Avoid NULL deref in grub_device_open.
+
 	* grub-core/kern/device.c (grub_device_open): Don't dereference
 	a NULL pointer upon failed grub_env_get.
 
